--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "3.1.0",
     "react-swipeable-views": "^0.13.3",
     "react-swipeable-views-utils": "^0.13.3",
-    "samo-js-client": "^6.0.3",
+    "recharts": "^1.7.0",
+    "samo-js-client": "^6.0.4",
     "tus-js-client": "^1.8.0-1"
   },
   "scripts": {
