--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.3.2",
+    "@material-ui/core": "^4.3.3",
     "js-base64": "^2.5.1",
     "ky": "^0.12.0",
     "lodash": "^4.17.15",
@@ -17,7 +17,7 @@
     "react-swipeable-views": "^0.13.3",
     "react-swipeable-views-utils": "^0.13.3",
     "recharts": "^1.7.1",
-    "samo-js-client": "^6.0.5",
+    "katamari-client": "^6.0.6",
     "tus-js-client": "^1.8.0-2"
   },
   "scripts": {
