--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "circa",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.3.3",
-    "js-base64": "^2.5.1",
-    "ky": "^0.12.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
-    "quill": "^1.3.6",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.1.1",
-    "react-swipeable-views": "^0.13.3",
-    "react-swipeable-views-utils": "^0.13.3",
-    "recharts": "^1.7.1",
-    "katamari-client": "^6.0.6",
-    "tus-js-client": "^1.8.0-2"
+    "@material-ui/core": "^4.11.4",
+    "js-base64": "^3.6.1",
+    "katamari-client": "^6.0.11",
+    "ky": "^0.28.5",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.0",
+    "quill": "^1.3.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
+    "recharts": "^2.0.9",
+    "tus-js-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
